Fixing display on mobile for rows w/ three images

--- a/css/healthmate.css
+++ b/css/healthmate.css
@@ -95,11 +95,6 @@ hr {
 	margin-top: 20px;
 }
 
-.mid-images {
-	padding-left: 5px;
-	padding-right: 5px;	
-}
-
 .middle-images {
 	margin-bottom: 20px;
 }
@@ -151,4 +146,5 @@ hr {
     .left-images {padding-right: 5px;}
     .right-images {padding-left: 5px;}
     .bot-images {margin-top: 10px;}
+	.mid-images {padding-left: 5px;padding-right: 5px;}
 }
