--- a/css/ridethru.css
+++ b/css/ridethru.css
@@ -110,11 +110,6 @@ hr {
 	margin-top: 20px;
 }
 
-.mid-images {
-	padding-left: 5px;
-	padding-right: 5px;	
-}
-
 .middle-images {
 	margin-bottom: 20px;
 }
@@ -166,4 +161,5 @@ hr {
     .left-images {padding-right: 5px;}
     .right-images {padding-left: 5px;}
     .bot-images {margin-top: 10px;}
+    .mid-images {padding-left: 5px;padding-right: 5px;}
 }
